argo/apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      nodeSelector:
        node-role: light
      enableServiceLinks: false
      containers:
        - name: nextcloud
          image: nextcloud:30-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/html
            - name: storage
              mountPath: /var/www/html/data
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nextcloud-data
        - name: storage
          persistentVolumeClaim:
            claimName: nextcloud-storage
